# create-cpp-project

./: .clang-format  CMakeLists.txt  INSTALL.sh  README.md  UNINSTALL.sh
src/: create.cpp  external.cpp  info.cpp  main.cpp  utils.h
